syntax = "proto3";
option java_multiple_files = true;
option java_package = "kr.co.rian.apmax.agent.performance";


package rian.apmax;

import public "rian/apmax/commons.proto";

service SystemPerformanceService {
  rpc collect(SystemPerformance) returns (Noop);
}

message SystemPerformance {
  string id = 1;
  int64 timestamp = 2;
  double cpu = 3;
  Disk disk = 4;
  Memory memory = 5;
  Network network = 6;
  Sensors sensors = 7;

  message Network {
    int64 received = 1;
    int64 sent = 2;
  }

  message Disk {
    int64 total = 1;
    int64 free = 2;
  }

  message Memory {
    int64 total = 1;
    int64 free = 2;
  }

  message Sensors {
    double temperature = 1;
    double voltage = 2;
    repeated int32 fanSpeed = 3;
  }
}
