package kr.co.rian.apmax.protocol;

option optimize_for = SPEED;

message CacheRequest {
  required uint32 reqTpCd = 1;
  required string authKey = 2;
  required string reqKey = 3;
  optional bytes reqParam = 4;
  optional bytes value = 5;
  optional uint64 runTime= 6;
}

message CacheResponse {
  required uint32 resTpCd = 1;
  optional string resKey = 2;
  optional string cnfKey = 3;
  optional int32 ttl = 4;
  optional bool ttlRenewYn = 5;
  optional uint32 remainCnt = 6;
  optional bytes value = 7;
}
